--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "compression": "^1.7.1",
+    "firebase": "^9.6.7",
     "papercss": "^1.8.3",
     "polka": "next",
     "sirv": "^1.0.0",
