--- a/functions/package.json
+++ b/functions/package.json
@@ -14,8 +14,14 @@
   },
   "main": "index.js",
   "dependencies": {
+    "@pickk/sens": "^1.1.0",
+    "axios": "^0.26.0",
+    "crypto": "^1.0.1",
     "firebase-admin": "^9.8.0",
-    "firebase-functions": "^3.14.1"
+    "firebase-functions": "^3.14.1",
+    "moment": "^2.29.1",
+    "node-sens": "^1.3.0",
+    "request-promise": "^4.2.6"
   },
   "devDependencies": {
     "eslint": "^7.6.0",
