chore: mdi icons 추가

--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "start": "node __sapper__/build"
   },
   "dependencies": {
+    "@mdi/js": "^6.5.95",
     "axios": "^0.26.0",
     "canvas-confetti": "^1.5.1",
     "compression": "^1.7.1",
     "firebase": "^9.6.7",
     "firebase-admin": "^10.0.2",
     "firebase-functions": "^3.18.1",
+    "mdi-svelte": "^1.1.2",
     "moment": "^2.29.1",
     "papercss": "^1.8.3",
     "polka": "next",
